--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4622,7 +4622,8 @@ a.badge:focus {
 .jumbotron {
   padding: 30px 15px;
   margin-bottom: 30px;
-  background-color: #fff;
+  color: inherit;
+  background-color: #eee;
 }
 .jumbotron h1,
 .jumbotron .h1 {
