--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,17 @@ section.module.parallax-0 {
   background-image: url("../img/bg/9.png");
 }
 
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.42;
+  border-radius: 15px;
+}
+
+
 @media all and (min-width: 600px) {
   section.module h2 {
     font-size: 42px;
