--- a/css/style.css
+++ b/css/style.css
@@ -2,23 +2,156 @@
   margin: auto;
 }
 
+.linkCol {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column wrap;
+}
+
 .container {
+  font-family: Source Sans Pro;
+  font-size: 17px !important;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-flow: row wrap;
 }
 
-.myBox {
-  border: 2px solid #EDEDED;
-  margin: 20px;
-  border-radius: 4%;
-  height: 30vh;
-  width: 50vh;
+.container2 {
+  font-family: Source Sans Pro;
+  font-size: 17px !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column wrap;
 }
 
-.myBoxTxt {
-  padding-top: 25px;
-  padding-bottom: 25px;
+.aboutText {
+  margin: 0px;
+}
+
+
+p#aboutText {
+  font-family: Source Sans Pro;
+  font-size: 15px;
+  width: 65vh;
+  margin: 0px;
+  text-align: left;
+}
+
+p {
+  font-family: Source Sans Pro;
+  font-size: 16px !important;
+}
+
+div#customPanel{
+  border: solid #000;
+  border-width: 2px;
+  margin:5px;
+}
+
+div#panelBody img {
+  max-width:100%;
+  max-height:100%;
+  z-index: 5;
+}
+
+div#panelBody {
+  position: relative;
+  max-width:60vh;
+  word-wrap:normal;
+}
+
+div#panelBodyTxt {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: #FFF;
+  opacity: 0;
+  padding: 16px;
+  font-size: 15px !important;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  /* ...and now for the proper property */
+  transition:.5s;
+}
+div#panelBodyTxt:hover { opacity:0.85; }
+
+div#panelHead {
+  background-color: #000;
+  width: 60vh;
+  color: #FFF;
+  text-align: center;
+  text-transform: uppercase;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  /* ...and now for the proper property */
+  transition:.5s;
+}
+div#panelHead:hover { background-color: #FFF; color:#000 !important;}
+
+
+form.custom {
+  width: 60%;
+  margin:15px;
+}
+
+button.link {  
+  background-color: #000;
+  color: #FFF !important;
+  border: solid #000;
+  border-width: 2px;
+  width: 60vh;
+  text-transform: uppercase;
+  margin:5px;
+  max-width:100%;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  /* ...and now for the proper property */
+  transition:.5s;
+}
+button.link:hover { background-color: #FFF; color:#000 !important;}
+
+button.boxy {
+  background-color: #000;
+  color: #FFF !important;
+  border: solid #000;
+  border-width: 2px;
+  max-width: 100%;
+  margin:4px;
+  padding:7px;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  /* ...and now for the proper property */
+  transition:.5s;
+}
+button.boxy:hover { background-color: #FFF; color:#000 !important;}
+
+#stingray {
+  color:blue;
+  font-size:16px;
+  padding-right:6px;
+  text-align: center;
+}
+
+img#stingrayImg {
+  opacity:0;  
+  position:absolute;
+}
+
+img#stingrayImg:hover {     
+  opacity: 1;  
 }
 
 section.module p {
@@ -90,10 +223,10 @@ section.module.parallax h1 {
 }
 
 section.module.parallax-1 {
-  background-image: url("../img/bg/4.jpg");
+  background-image: url("../img/bg/5.jpg");
 }
 section.module.parallax-2 {
-  background-image: url("../img/bg/2.jpg");
+  background-image: url("../img/bg/13.jpg");
 }
 section.module.parallax-3 {
   background-image: url("../img/bg/3.png");
