--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,11 @@
   margin: 0px;
 }
 
-
 p#aboutText {
   font-family: Source Sans Pro;
   font-size: 15px;
   width: 65vh;
+  max-width:100%;
   margin: 0px;
   text-align: left;
 }
@@ -59,7 +59,8 @@ div#panelBody img {
 
 div#panelBody {
   position: relative;
-  max-width:60vh;
+  width:60vh;
+  max-width:100%;
   word-wrap:normal;
 }
 
@@ -69,6 +70,7 @@ div#panelBodyTxt {
   left: 0px;
   width: 100%;
   height: 100%;
+  max-width:100%;
   background-color: #FFF;
   opacity: 0;
   padding: 16px;
@@ -85,6 +87,7 @@ div#panelBodyTxt:hover { opacity:0.85; }
 div#panelHead {
   background-color: #000;
   width: 60vh;
+  max-width:100%;
   color: #FFF;
   text-align: center;
   text-transform: uppercase;
@@ -233,25 +236,6 @@ section.module.parallax-3 {
 }
 section.module.parallax-0 {
   background-image: url("../img/bg/9.png");
-}
-
-
-@media screen and (max-width: 299px) {
-    .fa {
-        font-size: 1.2em;
-    }
-}
-
-@media screen and (min-width: 300px) and (max-width: 799px) {
-    .fa {
-        font-size: 2em;
-    }
-}
-
-@media screen and (min-width: 800px) {
-    .fa {
-        font-size: 4em;
-    }
 }
 
 
