cooler background pic

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -245,7 +245,7 @@ a:after {
 	width: 100%;
 	padding-top: 250px;
 	padding-bottom: 250px;
-	background: url(../img/museum.jpg);
+	background: url(../img/sloth.jpg);
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size:100%;
