--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,227 +1,74 @@
-/*
- * Author: Carlos Alvarez
- * URL: http://alvarez.is
- *
- * Project Name: Bolt - Free Bootstrap 3 Theme
- * Version: 1.0
- * URL: http://blacktie.co
- */
- 
-/* FONTS */
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700,900);
-
-/* OVERALL ASPECT */
-
 body {
-  background-color: #f2f2f2;
-    font-family: "Lato";
-    font-weight: 300;
-    font-size: 16px;
-    color: #555;
-
-    -webkit-font-smoothing: antialiased;
-    -webkit-overflow-scrolling: touch;
-    
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 100px;
 }
 
-a  {
-	color: #fff;
-	font-family: "Lato";
-	/*font-style:bold;*/
-	font-weight:bold;
-	padding: 5px;
-	font-variant:small-caps;
-	font-size:23px;
-	text-decoration: none !important;
-	text-align: center;
-	-o-transition:.5s;
-	-ms-transition:.5s;
-	-moz-transition:.5s;
-	-webkit-transition:.5s;
-	/* ...and now for the proper property */
-	transition:.5s;
+div {
+  margin: 5px;
 }
+
+a {
+  color: #3f9396;
+}
+
 a:hover {
-	font-weight:700;
-	color: rgba(255, 255, 255, 0.5);
-	text-decoration: none !important;
+  color: black;
 }
-
 
 a:visited {
-	text-decoration: none !important;
 }
 
-a:focus {
-	text-decoration: none !important;
-	color: #fff;
+#content {
+  display: flex;
+  flex-direction: row;
 }
 
-i {
-	-o-transition:.5s;
-	-ms-transition:.5s;
-	-moz-transition:.5s;
-	-webkit-transition:.5s;
-	/* ...and now for the proper property */
-	transition:.5s;
-	padding-left:10px;
-	padding-right:10px;
+#title {
+  font-size: 35px;
+  font-family: Montserrat;
+  padding: 10px;
+
 }
 
-i:hover {
-	color: rgba(255, 255, 255, 0.5);
+#pic {
+  width: 350px;
+  height: auto;
+  opacity: 0.85;
 }
 
-#contact {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
+#pic:hover {
+  opacity: 1;
 }
 
-.well {
-	background-color: rgba(0, 0, 0, 0);
-	border: 1px solid rgba(255, 255, 255, 0.5);
-	color: white;
-	padding:10px;
-	margin-bottom:0px;
-	border-radius:1px;
-	font-family:"Lato";
+#text {
+  padding: 10px;
 }
 
-.wella {
-	font-size:16px;
-	font-variant: normal !important;
-	font-weight:normal;
-}
-.wella:hover {
-	font-weight:normal;
+.icon {
+  padding: 5px;
+  color: black;
 }
 
-/* hello */
-#hello {
-	background: url(../img/bg.jpg);
-	background-repeat: no-repeat;
-	background-position: center;
-	background-width:100%;
+.sub {
+  color: #9C9C9C;
 }
-
-#avatar img {
-	border-radius: 50%;
-	height:200px;
-	width:auto;
-}
-
-#main {
-	max-width: 80%;
-	max-height: 80%;
-	width: 400px;
-    background: rgba(0, 0, 0, .6);
-    padding:20px;
-    margin:10px;
-}
-
-.mainwrap {
-	width: 100vw;
-	height: 100vh;
-  	display: flex;
-  	align-items: center;
-  	justify-content: center;
-  	flex-direction: column;
-}
-
-#hello h1 {
-	font-family: Raleway;
-	text-align: center;
-	font-size: 90px;
-	font-weight: 700;
-	letter-spacing: 3px;
-	color: white;
-    background: rgba(0, 0, 0, .5);
-}
-
-#hello h1:hover {
-	color: rgba(50,50,50,1);
-	background: rgba(255, 255, 255, .5);
-}
-
-#hello h2 {
-	text-align: center;
-	font-family: Raleway;
-	color: white;
-	font-weight: 400;
-	background: rgba(25, 25, 25, .5);
-	padding:1vw;
-}
-
-#hello h2:hover {
-	color: rgba(50,50,50,1);
-	background: rgba(255, 255, 255, .5);
-}
-
 
 @media only screen and (min-device-width: 320px)  and (max-device-width: 480px) {
-	#hello {
-		/*height: 300px;*/
-		background-size: auto !important;
-	}
-	#hello h1 {
-		font-size: 35px !important;
-	}
-	#hello h2 {
-		font-size: 25px !important;
-	}
-	.exp {
-		margin:20px !important;
-		width: 200px !important;
-		height: auto !important;
-	}
-	.tile2 p {
-		width:200px !important;
-		height: auto !important;
-		margin:20px;
-		margin-top:0px;
-	}
+  #photo {
+    display: none;
+  }
+  body {
+    padding-left: 0px;
+  }
 }
 
-@media only screen and (min-device-width: 481px)  and (max-device-width: 600px) {
-	#hello {
-		/*height: 300px;*/
-		/*background-size: auto !important;*/
-	}
-	#hello h1 {
-		font-size: 45px !important;
-	}
-	#hello h2 {
-		font-size: 35px !important;
-	}
-	.exp {
-	}
-	.tile2 p {
-		padding:20px;
-		margin-top:0;
-		width:300px;
-	}
-}
-
-@media only screen and (min-device-width: 601px)  and (max-device-width: 1100px) {
-	#hello {
-		/*height: 500px;*/
-		/*background-size: auto !important;*/
-	}
-	#hello h1 {
-		font-size: 45px !important;
-	}
-	#hello h2 {
-		font-size: 35px !important;
-	}
-	.exp {
-		margin:20px !important;
-	}
-}
-
-@media only screen and (min-device-width: 1101px)  and (max-device-width: 1201px) {
-	.exp {
-		margin:20px !important;
-	}
+@media only screen and (min-device-width: 481px)  and (max-device-width: 650px) {
+  #photo {
+    display: none;
+  }
+  body {
+    padding-left: 0px;
+  }
 }
