--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-family: Open Sans;    
+  padding-left: 100px;
 }
 
 div {
