--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -191,6 +191,66 @@ h3 {
   color: #9C9C9C;
 }
 
+.card {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+  
+  -webkit-box-flex-direction: row;
+  -moz-box-flex-direction: row;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+
+  -webkit-box-align-content: center;
+  -moz-box-align-content: center;
+  -webkit-align-content: center;
+  -ms-align-content: center;
+  align-content: center;
+
+  -webkit-box-flex-align-items: center;
+  -moz-box-flex-align-items: center;
+  -webkit-flex-align-items: center;
+  -ms-flex-align-items: center;
+  align-items: center;
+
+}
+
+.card img {
+  height: 20px;
+  width: auto;
+}
+
+.card .cardInfo {
+  max-width: 450px;
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex; 
+
+  -webkit-box-flex-direction: column;
+  -moz-box-flex-direction: column;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+
+  -webkit-box-align-content: center;
+  -moz-box-align-content: center;
+  -webkit-align-content: center;
+  -ms-align-content: center;
+  align-content: center;
+}
+
+.card .cardInfo p {
+  margin: 0;
+  padding-left: 15px;
+}
+
 @media only screen and (min-device-width: 320px)  and (max-device-width: 480px) {
   #photo {
     display: none;
