--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,6 +86,8 @@ a:visited {
 h3 {
   margin: 0;
   padding-bottom: 10px;
+  font-family: VT323;
+  font-size: 30px;
 }
 
 .content {
@@ -116,12 +118,12 @@ h3 {
   max-width: 500px;
 
   padding-bottom: 10px;
-
 }
 
 #section0 {
   border: 2px #BF1A2F solid;
   padding: 10px;
+  border-top: 0;
 }
 
 #section {
@@ -129,14 +131,30 @@ h3 {
   padding: 10px;
 }
 
+#section a {
+  color: #D89E00;
+}
+
 #section2 {
   border: 2px #018E42 solid;
   padding: 10px;
 }
 
+#section2 a {
+  color: #00863A;
+}
+
+#section2 a:hover {
+  color: #0000002;
+}
+
 #section3 {
   border: 2px #454E9E solid;
   padding: 10px;
+}
+
+#section3 a {
+  color: #3D4696;
 }
 
 #title {
@@ -217,11 +235,31 @@ h3 {
   -webkit-flex-align-items: center;
   -ms-flex-align-items: center;
   align-items: center;
+}
 
+.card2 {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+  
+  -webkit-box-flex-direction: row;
+  -moz-box-flex-direction: row;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
 }
 
 .card img {
-  height: 15px;
+  height: 18px;
+  width: auto;
+}
+
+.card2 img {
+  height: 18px;
   width: auto;
 }
 
@@ -246,9 +284,116 @@ h3 {
   align-content: center;
 }
 
+.card2 .cardInfo {
+  max-width: 450px;
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex; 
+
+  -webkit-box-flex-direction: column;
+  -moz-box-flex-direction: column;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+
+  -webkit-box-align-content: center;
+  -moz-box-align-content: center;
+  -webkit-align-content: center;
+  -ms-align-content: center;
+  align-content: center;
+}
+
 .card .cardInfo p {
   margin: 0;
   padding-left: 15px;
+
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex; 
+
+  -webkit-box-align-content: center;
+  -moz-box-align-content: center;
+  -webkit-align-content: center;
+  -ms-align-content: center;
+  align-content: center;
+}
+
+.card2 .cardInfo p {
+  margin: 0;
+  padding-left: 15px;
+
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex; 
+
+  -webkit-box-align-content: center;
+  -moz-box-align-content: center;
+  -webkit-align-content: center;
+  -ms-align-content: center;
+  align-content: center;
+}
+
+.card .cardInfo img {
+  margin-right: 5px;
+}
+
+.card2 .cardInfo img {
+  margin-right: 5px;
+}
+
+#nav {
+  width: 480px;
+  margin: 0px !important;
+  padding: 0px;
+}
+
+#nav a h3 {
+  color: #000000;
+  margin: 0px;
+  padding: 0px;
+}
+
+.navbar {
+  margin: 0px;
+  width: 50%;
+  height: 50px;
+  border: 2px solid #BF1A2F;
+  border-bottom: 0;
+  border-radius: 0;
+  border-top-left-radius: 2em;
+  border-top-right-radius: 2em;
+
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex; 
+
+  -webkit-box-align-items: center;
+  -moz-box-align-items: center;
+  -webkit-align-items: center;
+  -ms-align-items: center;
+  align-items: center; 
+
+  -webkit-box-justify-content: center;
+  -moz-box-justify-content: center;
+  -webkit-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+}
+
+#work2 {
+  border: 2px solid #BF1A2F;
+}
+
+#hack2 {
+  border: 2px solid #BF1A2F;
 }
 
 @media only screen and (min-device-width: 320px)  and (max-device-width: 480px) {
