--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,94 +1,53 @@
+
 body {
-  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-  display: -ms-flexbox;      /* TWEENER - IE 10 */
-  display: -webkit-flex;     /* NEW - Chrome */
   display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
-
-  -webkit-box-flex-direction: column;
-  -moz-box-flex-direction: column;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
   flex-direction: column;
-
-  -webkit-box-justify-content: center;
-  -moz-box-justify-content: center;
-  -webkit-justify-content: center;
-  -ms-justify-content: center;
+  align-items: center;
   justify-content: center;
 
-  -webkit-box-align-items: center;
-  -moz-box-align-items: center;
-  -webkit-align-items: center;
-  -ms-align-items: center;
-  align-items: center;
+  background-image: url(../img/bg1.jpg);
 
-  background-image: url("https://backgroundcheckall.com/wp-content/uploads/2017/12/aesthetic-desktop-background-1.jpg");
-  background-repeat: repeat;
-  background-color: rgba(255, 255, 255, 0.4);
-  background-blend-mode: lighten;
-}
-
-i {
-  font-color: gray;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: white;
 }
 
 .container {
-  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-  display: -ms-flexbox;      /* TWEENER - IE 10 */
-  display: -webkit-flex;     /* NEW - Chrome */
   display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
-
-  -webkit-box-flex-direction: row;
-  -moz-box-flex-direction: row;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .item {
   margin: 15px;
-  border: 1px white solid;
+  border: 1px white red;
   background-color: white;
   padding: 15px;
 
-  -webkit-box-flex-direction: column;
-  -moz-box-flex-direction: column;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
   flex-direction: column;
-
-  -webkit-box-justify-content: center;
-  -moz-box-justify-content: center;
-  -webkit-justify-content: center;
-  -ms-justify-content: center;
   justify-content: center;
-
-  -webkit-box-align-items: center;
-  -moz-box-align-items: center;
-  -webkit-align-items: center;
-  -ms-align-items: center;
   align-items: center;
 
-  max-height:333px;
-  height:333px;
-  overflow: scroll;
-
+  height:380px;
 }
 
 .item.left {
   max-width: 250px;
-  max-height: 333px;
+  padding: 20px;
 }
 
 .item.right {
   max-width: 800px;
+  overflow: scroll;
+  padding: 20px;
 }
 
 .item img {
   width: 100%;
-  padding: 10px;
 }
 
 #title {
@@ -98,22 +57,8 @@ i {
 }
 
 #icons {
-  -webkit-box-justify-content: space-evenly;
-  -moz-box-justify-content: space-evenly;
-  -webkit-justify-content: space-evenly;
-  -ms-justify-content: space-evenly;
   justify-content: space-evenly;
-
-  -webkit-box-flex-direction: row;
-  -moz-box-flex-direction: row;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
   flex-direction: row;
-
-  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-  display: -ms-flexbox;      /* TWEENER - IE 10 */
-  display: -webkit-flex;     /* NEW - Chrome */
   display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
 }
 
@@ -163,8 +108,6 @@ i {
   .item img {
     max-width: 200px !important;
   }
-
-
 }
 
 @media only screen and (min-device-width: 375px)  and (max-device-width: 650px) {
