--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-
 body {
   display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
   flex-direction: column;
@@ -14,6 +13,10 @@ body {
   background-color: white;
   height: 100%;
 
+}
+
+#avatar {
+  border-radius: 50%;
 }
 
 .container {
